--- a/buildconf/base.ini
+++ b/buildconf/base.ini
@@ -14,7 +14,7 @@ multicast = true
 threading = true
 minterpreters = true
 async = true
-ldap = auto
+ldap = false
 pcre = auto
 routing = auto
 alarm = auto
